safari container flex stretch fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,7 +224,8 @@ body {
     font-size: 1.2rem; }
   .get-app img {
     margin: 0 .5rem;
-    width: 50%; }
+    width: 50%;
+    height: 100%; }
 
 #mobile-menu {
   position: fixed;
@@ -558,8 +559,6 @@ section#product-features .features__list {
 section#product-features .features__phone img {
   width: 50%;
   width: 50%\0/ !important;
-  width: -moz-available;
-  width: -webkit-fill-available;
   margin-left: 2.6rem; }
   @media only screen and (min-width: 768px) {
     section#product-features .features__phone img {
