--- a/assets/scss/_globals.scss
+++ b/assets/scss/_globals.scss
@@ -42,5 +42,6 @@ body {
   img {
     margin: 0 .5rem;
     width: 50%;
+    height: 100%;
   }
 }
